--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
   <title>GuerrAlpha</title>
 
   <!--Estilos CSS-->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/index.css">
   <!--/Estilos CSS-->
 
@@ -44,6 +47,8 @@
 
 
   <!--Llamado a Js-->
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
