Adicion de archivos JS
Modularizamos un poco el codigo...Precaucion ya que todo pende de
Window.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
   <!--Llamado a Js-->
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/variables.js"></script>
+  <script src="js/visual.js"></script>
+  <script src="js/states.js"></script>
+  <script src="js/btn.js"></script>
+  <script src="js/clases.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
