--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <p id="salud">Salud:</p>
           <p id="defensa">Defensa:</p>
           <p id="fuerza">Fuerza:</p>
+          <p id="potHp">Pociones:</p>
         </div>
 
         <div>
@@ -55,6 +56,11 @@
               <button type="button" id="heroe" class="btn btn-secondary">Define tu Clase</button>
             </div>
 
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button type="button" id="iniciar" class="btn btn-secondary">Iniciar</button>
+              <button type="button" id="reset" class="btn btn-secondary invisible">Reset</button>
+            </div>
+
           </div>
         </div>
 
@@ -74,9 +80,8 @@
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/variables.js"></script>
-  <script src="js/visual.js"></script>
+  <script src="js/funciones.js"></script>
   <script src="js/states.js"></script>
-  <script src="js/btn.js"></script>
   <script src="js/clases.js"></script>
   <script src="js/index.js"></script>
 </body>
